updated img tags to picture tags

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -147,7 +147,7 @@
     </script>
 
   </head>
-  <body class="fonts-loading">
+    <body class="fonts-loading">
     <header>
       <div id="nav"></div>
       <div class="canvas-skills-grid">
@@ -214,75 +214,153 @@
             <h3>take me to...</h3>
           </div>
           <div class="menu-grid images" id="the-menu">
-            <img src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_200,h_200/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp" 
-              alt="GitHub logo"
-              class="git-gub-thumbnail fancy-border-img"
-              width="50";
-              height="50";
-              aspect-ratio: 1 / 1;
-            >
-            <div class="click-me">  
-              <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+            <div class="git-gub-thumbnail thumbnails images fancy-border-img">
+              <picture>
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_200,h_200/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  type="image/avif"
+                  media="(min-width: 1200px)"
+                  sizes="100vw"
+                />
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_200,h_200/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  type="image/avif"
+                  media="(min-width: 481px) and (max-width: 1199px)"
+                  sizes="100vw"
+                />
+                <img 
+                  src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_200,h_200/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  alt="GitHub logo"
+                    width="100";
+                    height="100";
+                    style="object-fit: contain;"
+                    loading="lazy"  
+                    fetchpriority="auto"
+                    decoding="async"
+                />
+              </picture>
+              <div class="click-me" id="collections-buttongrid">  
+                <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+              </div>
             </div>
-            <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_375,h_329/v1743469949/seo-grade_mmztmf.avif"
-              alt="Tech Trends Blog SEO grade result showing performance and optimization"
-              class="fancy-border-img collections-thumbnail"
-              width="375"
-              height="329"
-              style="object-fit: cover;"
-              loading="lazy"  
-              fetchpriority="auto"
-              decoding="async"
-            >
-            <div class="click-me">
-              <a href="/pages/project1/project1-the-grade.html" target="_blank" rel="noopener noreferrer">&lt; the grade &gt; </a>
+            <div class="thumbnails images fancy-border-img">
+              <picture>
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_336/v1743469949/seo-grade_mmztmf.avif"
+                  type="image/avif"
+                  media="(min-width: 1200px)"
+                  sizes="100vw"
+                />
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_489,h_411/v1743469949/seo-grade_mmztmf.avif"
+                  type="image/avif"
+                  media="(min-width: 481px) and (max-width: 1199px)"
+                  sizes="100vw"
+                />
+                <img 
+                  src="/img/seo-grade-mobile.avif"
+                  alt="Tech Trends Blog SEO grade result showing performance and optimization"
+                  width="292"
+                  height="252"
+                  style="object-fit: contain;"
+                  loading="lazy"  
+                  fetchpriority="auto"
+                  decoding="async"
+                />
+              </picture>
+              <div class="click-me collections-buttongrid">
+                <a href="/pages/project1/project1-the-grade.html" target="_blank" rel="noopener noreferrer">&lt; the grade &gt; </a>
+              </div>
             </div>
-            <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_375,h_431/v1747144506/past-meets-future_pmafy7.avif"
-              alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
-              class="fancy-border-img collections-thumbnail"
-              width="375"
-              height="431"
-              loading="lazy"
-              fetchpriority="low"
-              style="object-fit: cover;"
-              decoding="async" 
-            >
-            <div class="click-me">  
-              <a href="/pages/project-the-design.html" target="_blank" rel="noopener noreferrer">&lt; the design &gt;</a>
+            <div class="thumbnails images fancy-border-img">
+              <picture>
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_229/v1747144506/past-meets-future_pmafy7.avif"
+                  type="image/avif"
+                  media="(min-width: 1200px)"
+                  sizes="100vw"
+                />
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_230,h_196/v1747144506/past-meets-future_pmafy7.avif"
+                  type="image/avif"
+                  media="(min-width: 481px) and (max-width: 1199px)"
+                  sizes="100vw"
+                />
+                <img 
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747144506/past-meets-future_pmafy7.avif"
+                  alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
+                  width="222"
+                  height="189"
+                  loading="lazy"
+                  fetchpriority="low"
+                  style="object-fit: contain;"
+                  decoding="async" 
+                />
+              </picture>
+              <div class="click-me collections-buttongrid">  
+                <a href="/pages/project-the-design.html" target="_blank" rel="noopener noreferrer">&lt; the design &gt;</a>
+              </div>
             </div>
-
-            <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_375,h_256/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
-              alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-              object-fit="cover"
-              class="fancy-border-img collections-thumbnail"
-              width="375"
-              height="256"
-              loading="lazy"
-              fetchpriority="low"
-              style="object-fit: cover;"
-              decoding="async"
-            >
-            <div class="click-me">  
-              <a href="/pages/project1-casestudy.html" target="_blank" rel="noopener noreferrer">&lt; the casestudy &gt;</a>
+            <div class="thumbnails images fancy-border-img">
+              <picture>
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  type="image/avif"
+                  media="(min-width: 1200px)"
+                  sizes="100vw"
+                />
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_230,h_196/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  type="image/avif"
+                  media="(min-width: 481px) and (max-width: 1199px)"
+                  sizes="100vw"
+                />
+                <img 
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
+                  object-fit="cover"
+                  width="222"
+                  height="189"
+                  loading="lazy"
+                  fetchpriority="low"
+                  style="object-fit: contain;"
+                  decoding="async" 
+                />
+              </picture>
+              <div class="click-me collections-buttongrid">  
+                <a href="/pages/project1-casestudy.html" target="_blank" rel="noopener noreferrer">&lt; the casestudy &gt;</a>
+              </div>
             </div>
-            <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
-              alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-              class="collections-thumbnail fancy-border-img"
-              width="375"
-              height="210"
-              fetchpriority="high"
-              loading="eager"
-              decoding="async"
-              style="object-fit: cover; aspect-ratio: 16 / 9; width: 100%; height: auto;"
-            >
-            <div class="click-me">
-              <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">&lt; final design &gt;</a>
+            <div class="thumbnails images fancy-border-img">
+              <picture>
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  type="image/avif"
+                  media="(min-width: 1200px)"
+                  sizes="100vw"
+                />
+                <source
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_230,h_196/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  type="image/avif"
+                  media="(min-width: 481px) and (max-width: 1199px)"
+                  sizes="100vw"
+                />
+                <img 
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
+                  alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
+                  width="222"
+                  height="189"
+                  fetchpriority="high"
+                  loading="eager"
+                  decoding="async"
+                  style="object-fit: contain; width: 100%; height: auto;"
+                />
+              </picture>
+              <div class="click-me collections-buttongrid">
+                <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">&lt; final design &gt;</a>
+              </div>
             </div>
-
           </div> 
         </article>
       </section>
@@ -308,7 +386,7 @@
               height="112"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover;"
+              style="object-fit: contain;"
               decoding="async" 
             />
           </picture> 
