--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -179,7 +179,7 @@
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="object-fit: cover; aspect-ratio: 16 / 9; width: 100%; height: auto;"
+            style="object-fit: cover; width: 100%; height: auto;"
           />
         </picture>
         <div class="canvas-skills-title">
