removed inline style

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -172,7 +172,7 @@
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="object-fit: cover; width: 100%; height: auto;"
+            style="object-fit: cover;"
           />
         </picture>
         <div class="canvas-skills-title">
