--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -27,7 +27,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_933,h_538/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_933,h_538/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
     />
@@ -36,7 +36,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_441/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_439/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
     />
@@ -159,7 +159,7 @@
 
           <!-- Mobile ≤ 768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_441/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_761,h_439/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif" />
 
@@ -182,8 +182,7 @@
       </div>
     </header>
     <main class="about-me" id="projects">
-      <section id="description">
-        <div class="resume-date fancy-border project-title">
+        <div class="resume-date fancy-border project-title" id="description">
           <h2>project 1 | the website</h2>
           <h2>tech trends</h2>
         </div>
@@ -356,8 +355,6 @@
             </div>
           </div> 
         </article>
-      </section>
-      <section id="contact">
         <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
@@ -399,8 +396,7 @@
                 >explore my portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
           </div>
         </div>
-      </section>
-    </main>
+\    </main>
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
@@ -409,7 +405,7 @@
         <li><a href="/pages/project1/project1-the-grade.html">the grade</a></li>
         <li><a href="/pages/project1/project1-the-design.html">the design</a></li>
         <li><a href="/pages/project1/project1-the-casestudy.html">the casestudy</a></li>
-        <li><a href="#contact">contact me</a></li>
+        <li><a href="#uthor-bio">contact me</a></li>
       </ul>
     </div>
     <div>
