--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -15,49 +15,43 @@
     <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-    <!-- ✅ Desktop ≥ 941px -->
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
-      type="image/avif"
-      media="(min-width: 941px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
-      imagesizes="744px"
-    />
-
-    <!-- ✅ Tablet: 769px–940px -->
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
-      type="image/avif"
-      media="(min-width: 769px) and (max-width: 940px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
-      imagesizes="916px"
-    />
-
-    <!-- ✅ Mobile: 481px–768px -->
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
-      type="image/avif"
-      media="(min-width: 481px) and (max-width: 768px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
-      imagesizes="744px"
-    />
-
-    <!-- ✅ Optional fallback for ≤480px -->
+    <!-- ✅ Fallback image for ≤480px (should match <img> tag) -->
     <link
       rel="preload"
       as="image"
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
-      imagesizes="480px"
+      fetchpriority="high"
     />
+
+    <!-- ✅ Tablet: 481–768px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      type="image/avif"
+      media="(min-width: 481px) and (max-width: 768px)"
+    />
+
+    <!-- ✅ Small Desktop: 769–940px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      type="image/avif"
+      media="(min-width: 769px) and (max-width: 940px)"
+    />
+
+    <!-- ✅ Full Desktop ≥ 941px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      type="image/avif"
+      media="(min-width: 941px)"
+    />
+
     <link
       class="tab-logo"
       rel="icon"
@@ -127,7 +121,58 @@
   </head>
   <body class="fonts-loading">
     <header>
-      <div id="nav"></div>
+      <nav role="navigation" aria-label="Main navigation">
+        <div class="nav-logo">
+          <a href="/index.html">
+            <img
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_240,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              alt="Logo for Allison Stock Inc"
+              width="240"
+              height="105"
+              loading="eager"
+              fetchpriority="high"
+              style="aspect-ratio: 240 /105; object-fit: contain; width: 100%; height: auto;"
+              decoding="async"
+            />
+          </a>
+        </div>
+
+        <div class="menu-toggle" id="menu-toggle" role="button"   
+          tabindex="0"  aria-label="Open Menu">
+          <img
+            src="/img/hamburger-icon.png"
+            alt="Hamburger Icon Menu"
+            class="hamburger-icon"
+            width="32"
+            height="32"
+            loading="eager"
+            fetchpriority="high"
+            style="aspect-ratio: 1 / 1; object-fit: cover;"
+          />
+        </div>
+
+        <div class="nav-links">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+
+        <div class="hamburger-nav-links" id="mobile-menu">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+      </nav>
       <div class="canvas-skills-grid">
         <picture>
           <!-- Desktop ≥ 1025px -->
@@ -409,7 +454,73 @@
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-    <div id="footer"></div>
+    <footer id="nav">
+      <div class="footer-logo">
+        <img       
+          src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+          alt="Photo of Genny Allison, the web developer and AI content specialist"
+          width="384"
+          height="240"
+          loading="lazy"
+          fetchpriority="low"
+          style="object-fit: contain; aspect-ratio: 16 / 10;"
+          decoding="async" 
+        />
+      </div>
+      <div class="footer-links" id="footer-links">
+        <ul>
+          <li><a href="/index.html" class="links">my home</a></li>           
+          <li><a href="/pages/about.html" class="links">about me</a></li>
+          <li><a href="/pages/skills.html" class="links">my skills</a></li>
+          <li><a href="/pages/resume.html" class="links">my resume</a></li>
+          <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
+          <li><a href="/pages/contact.html" class="links">contact me</a></li>
+        </ul>
+      </div>
+      <div class="social-media">
+        <ul>
+          <li>
+            <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/x-bird-icon.webp" 
+                alt="X (Twitter) logo"
+                width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/ig-icon.webp" 
+                alt="Instagram logo"
+                width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/linkedin-icon.webp" 
+                alt="LinkedIn logo"
+                width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/git-icon.webp" 
+                alt="GitHub logo"width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script src="/assets/script.js" defer></script>
   </body>
 </html>      
