--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -127,7 +127,58 @@
   </head>
   <body class="fonts-loading">
     <header>
-      <div id="nav"></div>
+      <nav role="navigation" aria-label="Main navigation">
+        <div class="nav-logo">
+          <a href="/index.html">
+            <img
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_240,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              alt="Logo for Allison Stock Inc"
+              width="240"
+              height="105"
+              loading="eager"
+              fetchpriority="high"
+              style="aspect-ratio: 240 /105; object-fit: contain; width: 100%; height: auto;"
+              decoding="async"
+            />
+          </a>
+        </div>
+
+        <div class="menu-toggle" id="menu-toggle" role="button"   
+          tabindex="0"  aria-label="Open Menu">
+          <img
+            src="/img/hamburger-icon.png"
+            alt="Hamburger Icon Menu"
+            class="hamburger-icon"
+            width="32"
+            height="32"
+            loading="eager"
+            fetchpriority="high"
+            style="aspect-ratio: 1 / 1; object-fit: cover;"
+          />
+        </div>
+
+        <div class="nav-links">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+
+        <div class="hamburger-nav-links" id="mobile-menu">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+      </nav>
       <div class="canvas-skills-grid">
         <picture>
           <!-- Desktop ≥ 1025px -->
@@ -157,7 +208,7 @@
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="object-fit: cover; aspect-ratio: 16 / 9; width: 100%; height: auto;"
+            style="object-fit: cover; width: 100%; height: auto;"
           />
         </picture>
         <div class="canvas-skills-title">
@@ -490,7 +541,73 @@
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-    <div id="footer"></div>
+    <footer id="nav">
+      <div class="footer-logo">
+        <img       
+          src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+          alt="Photo of Genny Allison, the web developer and AI content specialist"
+          width="384"
+          height="240"
+          loading="lazy"
+          fetchpriority="low"
+          style="object-fit: contain; aspect-ratio: 16 / 10;"
+          decoding="async" 
+        />
+      </div>
+      <div class="footer-links" id="footer-links">
+        <ul>
+          <li><a href="/index.html" class="links">my home</a></li>           
+          <li><a href="/pages/about.html" class="links">about me</a></li>
+          <li><a href="/pages/skills.html" class="links">my skills</a></li>
+          <li><a href="/pages/resume.html" class="links">my resume</a></li>
+          <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
+          <li><a href="/pages/contact.html" class="links">contact me</a></li>
+        </ul>
+      </div>
+      <div class="social-media">
+        <ul>
+          <li>
+            <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/x-bird-icon.webp" 
+                alt="X (Twitter) logo"
+                width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/ig-icon.webp" 
+                alt="Instagram logo"
+                width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/linkedin-icon.webp" 
+                alt="LinkedIn logo"
+                width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+              <img src="/img/git-icon.webp" 
+                alt="GitHub logo"width: 2.5rem;
+                height: 2.5rem;
+                aspect-ratio: 1 / 1;
+              >
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script src="/assets/script.js" defer></script>
   </body>
 </html>      
