--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -18,7 +18,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_396/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_430/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
     />
@@ -147,7 +147,7 @@
         <picture>
           <!-- Desktop ≥ 1025px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_396/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_430/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif" />
 
@@ -235,7 +235,7 @@
                 <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
               </div>
             </div>
-            <div class="thumbnails images fancy-border-img">
+            <div class="thumbnail-aspect thumbnails images fancy-border-img">
               <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_336/v1743469949/seo-grade_mmztmf.avif"
@@ -264,7 +264,7 @@
                 <a href="/pages/project1/project1-the-grade.html" target="_blank" rel="noopener noreferrer">&lt; the grade &gt; </a>
               </div>
             </div>
-            <div class="thumbnails images fancy-border-img">
+            <div class="thumbnail-aspect thumbnails images fancy-border-img">
               <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_229/v1747144506/past-meets-future_pmafy7.avif"
@@ -293,7 +293,7 @@
                 <a href="/pages/project-the-design.html" target="_blank" rel="noopener noreferrer">&lt; the design &gt;</a>
               </div>
             </div>
-            <div class="thumbnails images fancy-border-img">
+            <div class="thumbnail-aspect thumbnails images fancy-border-img">
               <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
@@ -323,7 +323,7 @@
                 <a href="/pages/project1-casestudy.html" target="_blank" rel="noopener noreferrer">&lt; the casestudy &gt;</a>
               </div>
             </div>
-            <div class="thumbnails images fancy-border-img">
+            <div class="thumbnail-aspect thumbnails images fancy-border-img">
               <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
