updated aspect ratio for each thumbnail and all breakpoints

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -206,8 +206,8 @@
             <h3>take me to...</h3>
           </div>
           <div class="menu-grid images" id="the-menu">
-            <div class="git-gub-thumbnail thumbnails images fancy-border-img">
-              <picture>
+            <div class="thumbnails images fancy-border-img">
+              <picture class="git-gub-thumbnail">
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_200,h_200/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
@@ -235,8 +235,8 @@
                 <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
               </div>
             </div>
-            <div class="thumbnail-aspect thumbnails images fancy-border-img">
-              <picture>
+            <div class="thumbnails images fancy-border-img">
+              <picture class="thumbnail-aspect">
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_336/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
@@ -244,7 +244,7 @@
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_489,h_411/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_170,h_146/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
@@ -264,8 +264,8 @@
                 <a href="/pages/project1/project1-the-grade.html" target="_blank" rel="noopener noreferrer">&lt; the grade &gt; </a>
               </div>
             </div>
-            <div class="thumbnail-aspect thumbnails images fancy-border-img">
-              <picture>
+            <div class="thumbnails images fancy-border-img">
+              <picture class="thumbnail-aspect">
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_229/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
@@ -293,8 +293,8 @@
                 <a href="/pages/project-the-design.html" target="_blank" rel="noopener noreferrer">&lt; the design &gt;</a>
               </div>
             </div>
-            <div class="thumbnail-aspect thumbnails images fancy-border-img">
-              <picture>
+            <div class="thumbnails images fancy-border-img">
+              <picture class="thumbnail-aspect">
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
@@ -323,8 +323,8 @@
                 <a href="/pages/project1-casestudy.html" target="_blank" rel="noopener noreferrer">&lt; the casestudy &gt;</a>
               </div>
             </div>
-            <div class="thumbnail-aspect thumbnails images fancy-border-img">
-              <picture>
+            <div class="thumbnails images fancy-border-img">
+              <picture class="thumbnail-aspect">
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
