--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -223,9 +223,9 @@
                 <img 
                   src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_200,h_200/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   alt="GitHub logo"
-                    width="100";
-                    height="100";
-                    style="object-fit: contain;"
+                    width="200";
+                    height="200";
+                    style="object-fit: contain; width: 100%; height: auto;"
                     loading="lazy"  
                     fetchpriority="auto"
                     decoding="async"
@@ -254,7 +254,7 @@
                   alt="Tech Trends Blog SEO grade result showing performance and optimization"
                   width="292"
                   height="252"
-                  style="object-fit: contain;"
+                  style="object-fit: contain; width: 100%; height: auto;"
                   loading="lazy"  
                   fetchpriority="auto"
                   decoding="async"
@@ -285,7 +285,7 @@
                   height="189"
                   loading="lazy"
                   fetchpriority="low"
-                  style="object-fit: contain;"
+                  style="object-fit: contain; width: 100%; height: auto;"
                   decoding="async" 
                 />
               </picture>
@@ -315,7 +315,7 @@
                   height="189"
                   loading="lazy"
                   fetchpriority="low"
-                  style="object-fit: contain;"
+                  style="object-fit: contain; width: 100%; height: auto;"
                   decoding="async" 
                 />
               </picture>
@@ -376,7 +376,7 @@
               height="112"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: contain;"
+              style="object-fit: contain; width: 100%; height: auto;"
               decoding="async" 
             />
           </picture> 
