optimized all images and containers

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -148,7 +148,7 @@
         <picture>
           <!-- Desktop ≥ 1025px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_430/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif" />
 
@@ -173,7 +173,6 @@
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="object-fit: cover; width: 100%; height: auto;"
           />
         </picture>
         <div class="canvas-skills-title">
@@ -206,9 +205,9 @@
           <div class="takeme-text">
             <h3>take me to...</h3>
           </div>
-          <div class="menu-grid images" id="the-menu">
-            <div class="thumbnails images fancy-border-img">
-              <picture class="git-gub-thumbnail">
+          <div class="menu-grid" id="the-menu">
+            <div class="thumbnails fancy-border-img">
+              <picture class="github-container">
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_390/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
@@ -224,12 +223,11 @@
                 <img 
                   src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220,h_220/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   alt="GitHub logo"
-                    width="220";
-                    height="220";
-                    style="object-fit: contain; width: 100%; height: auto;"
-                    loading="lazy"  
-                    fetchpriority="auto"
-                    decoding="async"
+                  width="220"
+                  height="220"
+                  loading="lazy"  
+                  fetchpriority="auto"
+                  decoding="async"
                 />
               </picture>
               <div class="click-me" id="collections-buttongrid">  
@@ -239,7 +237,7 @@
             <div class="thumbnails images fancy-border-img">
               <picture class="thumbnail-aspect">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_336/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
@@ -255,7 +253,6 @@
                   alt="Tech Trends Blog SEO grade result showing performance and optimization"
                   width="292"
                   height="252"
-                  style="object-fit: contain; width: 100%; height: auto;"
                   loading="lazy"  
                   fetchpriority="auto"
                   decoding="async"
@@ -265,10 +262,10 @@
                 <a href="/pages/project1/project1-the-grade.html" target="_blank" rel="noopener noreferrer">&lt; the grade &gt; </a>
               </div>
             </div>
-            <div class="thumbnails images fancy-border-img">
+            <div class="thumbnails fancy-border-img">
               <picture class="thumbnail-aspect">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_229/v1747144506/past-meets-future_pmafy7.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
@@ -286,7 +283,6 @@
                   height="189"
                   loading="lazy"
                   fetchpriority="low"
-                  style="object-fit: contain; width: 100%; height: auto;"
                   decoding="async" 
                 />
               </picture>
@@ -297,7 +293,7 @@
             <div class="thumbnails images fancy-border-img">
               <picture class="thumbnail-aspect">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
@@ -311,12 +307,10 @@
                 <img 
                   src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-                  object-fit="cover"
                   width="222"
                   height="189"
                   loading="lazy"
                   fetchpriority="low"
-                  style="object-fit: contain; width: 100%; height: auto;"
                   decoding="async" 
                 />
               </picture>
@@ -324,10 +318,10 @@
                 <a href="/pages/project1-casestudy.html" target="_blank" rel="noopener noreferrer">&lt; the casestudy &gt;</a>
               </div>
             </div>
-            <div class="thumbnails images fancy-border-img">
+            <div class="thumbnails fancy-border-img">
               <picture class="thumbnail-aspect">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_271,h_187/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
@@ -340,14 +334,12 @@
                 />
                 <img 
                   src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
-                  alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
                   alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
                   width="222"
                   height="189"
                   fetchpriority="high"
                   loading="eager"
                   decoding="async"
-                  style="object-fit: contain; width: 100%; height: auto;"
                 />
               </picture>
               <div class="click-me collections-buttongrid">
@@ -377,7 +369,6 @@
               height="112"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: contain; width: 100%; height: auto;"
               decoding="async" 
             />
           </picture> 
