--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -18,7 +18,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_430/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_765,h_392/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
     />
@@ -235,7 +235,7 @@
               </div>
             </div>
             <div class="thumbnails images fancy-border-img">
-              <picture class="thumbnail-aspect">
+              <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
@@ -263,7 +263,7 @@
               </div>
             </div>
             <div class="thumbnails fancy-border-img">
-              <picture class="thumbnail-aspect">
+              <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
@@ -291,7 +291,7 @@
               </div>
             </div>
             <div class="thumbnails images fancy-border-img">
-              <picture class="thumbnail-aspect">
+              <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
@@ -319,7 +319,7 @@
               </div>
             </div>
             <div class="thumbnails fancy-border-img">
-              <picture class="thumbnail-aspect">
+              <picture>
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_390,h_329/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
