updated grade img using cloudinary intead of local

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -250,10 +250,10 @@
                   sizes="100vw"
                 />
                 <img 
-                  src="/img/seo-grade-mobile.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222,h_189/v1743469949/seo-grade_mmztmf.avif"
                   alt="Tech Trends Blog SEO grade result showing performance and optimization"
-                  width="292"
-                  height="252"
+                  width="222"
+                  height="189"
                   loading="lazy"  
                   fetchpriority="auto"
                   decoding="async"
